# Database-Client-of-Academic-System

./: CMakeLists.txt  README.md  login_information.cpp  login_information.h  main.cpp  quarter.cpp  quarter.h  utility.cpp  utility.h
stored_procedures/: d_sp.sql
